# deep-generative-models-biu

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  gold_index_change.ipynb  main.py  pyproject.toml  pytest.ini  requirements.txt  running-instructions.md
common/: consts.py  data.md  entities.py  nq_data.py  utils.py
common/cli/: env_args.py
common/configs/: log_config.py
common/env_utils/: arg_setting.py  cli.py
experiments/: __init__.py  abstract.py  gold_idx_change.py  num_docs_change.py  runner.py  test.py
notebooks/: py_runner.ipynb  results.ipynb
running_instructions/: google_colab.md  poetry.md
src/: metrics.py  prompt_builder.py
src/wrappers/: __init__.py  hf_tokenizer.py  vllm.py
tests/: conftest.py  consts.py  test_data_handling.py  test_experiments_runner.py  test_integration.py  test_prompt_building.py  test_vllm_wrapper.py
tests/e2e/: test_experiment_e2e.py
tests/experiments/: test_runner.py
tests/mocks/: vllm_wrapper.py
tests/results/: data_handling.yaml  hf_tokenizer.yaml  metrics.yaml  prompt_building.yaml  vllm_wrapper.yaml
tests/unit/: test_data_handling.py  test_hf_tokenizer.py  test_metrics.py  test_prompt_building.py  test_vllm_wrapper.py
