[project]
name = "deep-generative-models-biu"
version = "0.1.0"
description = ""
authors = [
    {name = "GalSarid21",email = "gal.sarid@intel.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers (>=4.49.0,<5.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "xopen (>=2.0.2,<3.0.0)",
    "deepdiff (>=8.4.2,<9.0.0)"
]

[tool.poetry]
packages = [{include = "*", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
